--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,24 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 #gameBoard{
-    border: 3px solid black;
-    width: 300px;
-    height: 50vh;
+    padding: 5px 5px;
+    margin: 10vh auto;
+    border: 1px solid black;
+    width: fit-content;
+    height: 60vh;
     display: flex;
+    box-sizing: border-box;
     
 }
 
 .game-box{
-    display: inline-block;
-    width: 200px;
-    height: 200px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
+    
+    margin: 0 2px;
+    min-width: 150px;
+    height: calc(99% / 3); 
+    background-color: lightgray; 
+    border: 1px solid black;
 }
